tests/positive/basic/string_array_pop/input.ci
void main() {
    string[] xs = ["red", "green", "blue"];
    print(arrayPop(xs) + "\n");
    print(toString(count(xs)) + "\n");
}
