tests/negative/runtime/arrayget_empty/input.ci
void main() {
    int[] xs = [];
    print(toString(arrayGet(xs, 0)) + "\n");
}
